--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
     * { box-sizing: border-box; }
     html { scroll-behavior: smooth; }
-    body { margin:0; font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; background: var(--bg); color: var(--text); }
+    body { margin:0; font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; background: var(--bg); color: var(--text); position: relative; overflow-x: hidden; }
     a { color: var(--brand); text-decoration: none; }
     a:hover { text-decoration: underline; }
 
@@ -105,6 +105,27 @@
     /* Alternate left-right for features */
     .feature:nth-of-type(odd) .feature-grid { direction: rtl; }
     .feature:nth-of-type(odd) .feature-grid > * { direction: ltr; }
+      /* Ambient moving light-blue glow */
+    header, main, section, footer { position: relative; z-index: 1; }
+    body::before {
+      content: "";
+      position: fixed;
+      inset: -25% -25% -35% -25%;
+      background: radial-gradient(600px 420px at 20% 30%, rgba(43,176,237,0.25), rgba(14,165,233,0.10) 45%, transparent 65%),
+                  radial-gradient(500px 380px at 80% 70%, rgba(167,139,250,0.14), transparent 60%);
+      filter: blur(40px);
+      animation: drift 18s ease-in-out infinite alternate;
+      pointer-events: none;
+      z-index: 0;
+    }
+    @keyframes drift {
+      0%   { transform: translate3d(-6%, -4%, 0) scale(1); }
+      50%  { transform: translate3d(3%, 2%, 0) scale(1.03); }
+      100% { transform: translate3d(8%, 6%, 0) scale(1.06); }
+    }
+    @media (prefers-reduced-motion: reduce) {
+      body::before { animation: none; }
+    }
   </style>
 </head>
 <body>
@@ -129,7 +150,7 @@
   <!-- Hero -->
   <main id="top" class="hero" role="main">
     <div>
-      <h1>RESCUE — Resilience and Cyber Security of Integrated Cyber-Physical Energy Systems</h1>
+      <h1>RESCUE — Responsive Science Communication & Understanding</h1>
       <p>
         A public showcase for the RESCUE project. Explore goals, methods, partners, and outputs.
         This proof‑of‑concept uses accessible, responsive, and lightweight markup suitable for GitHub Pages.
