fixing text title header

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <!-- Hero -->
   <main id="top" class="hero" role="main">
     <div>
-      <h1>RESCUE — Responsive Science Communication & Understanding</h1>
+      <h1>RESCUE — Resilience and Cyber Security of Integrated Cyber-Physical Energy Systems</h1>
       <p>
         A public showcase for the RESCUE project. Explore goals, methods, partners, and outputs.
         This proof‑of‑concept uses accessible, responsive, and lightweight markup suitable for GitHub Pages.
