--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
     .nav { max-width: var(--maxw); margin: 0 auto; display:flex; align-items:center; justify-content:space-between; padding: 14px 20px; position: relative; }
     .brand { display:flex; align-items:center; gap:10px; font-weight: 700; letter-spacing: 0.3px; }
     .brand .logo { width: 28px; height: 28px; border-radius: 6px; background: linear-gradient(135deg, var(--brand-strong), var(--accent)); box-shadow: var(--shadow); }
+    /* RESCUE word scanner effect */
+    .brand .home { display:inline-flex; gap: 1px; letter-spacing: 0.1ch; }
+    .brand .home .glyph { color: var(--text); transition: color 140ms ease, text-shadow 140ms ease; text-shadow: none; }
+    .brand .home .glyph.lit { color: #ff6f7a; text-shadow: 0 0 12px rgba(255,111,122,0.75), 0 0 22px rgba(255,111,122,0.45); }
+    .brand .home .glyph.alert { color: #ff3b3b; text-shadow: 0 0 16px rgba(255,59,59,0.9), 0 0 28px rgba(255,59,59,0.65); }
+    .brand .home .glyph.blink { animation: blinkSoft 140ms steps(2, start) 10; }
+    @keyframes blinkSoft { 50% { opacity: 0.7; text-shadow: 0 0 6px rgba(255,59,59,0.7), 0 0 16px rgba(255,59,59,0.5); } }
+    /* RESCUE word scanner effect */
+    .brand .home { display:inline-flex; gap: 1px; letter-spacing: 0.1ch; }
+    .brand .home .glyph { color: var(--text); transition: color 140ms ease, text-shadow 140ms ease; text-shadow: none; }
+    .brand .home .glyph.lit { color: #ff4d4d; text-shadow: 0 0 10px rgba(255,77,77,0.7), 0 0 18px rgba(255,77,77,0.5); }
     .nav a { font-weight: 500; color: var(--text); opacity: 0.9; }
     .nav a:hover { opacity: 1; }
     .nav ul { list-style:none; display:flex; gap: 18px; margin:0; padding:0; }
@@ -147,6 +158,13 @@
       body::before { animation: none; }
       .btn::before { transition: none; }
     }
+      .footer-links .icon { vertical-align: text-bottom; margin-right: 6px; }
+      /* Nav CTA button styles (for CoSimPlat / REPlay) */
+    .nav .nav-cta { position: relative; overflow: hidden; display:inline-flex; align-items:center; gap:8px; padding: 8px 12px; border-radius: 999px; border: 1px solid var(--border); background: #111828; color: var(--text); font-weight: 600; text-decoration:none; box-shadow: var(--shadow); transition: transform 120ms ease; }
+    .nav .nav-cta:active { transform: translateY(1px); }
+    .nav .nav-cta::before { content: ""; position: absolute; inset: -2px; border-radius: inherit; background: linear-gradient(135deg, var(--brand-strong), var(--accent)); transform: translateX(-120%) translateY(60%) rotate(-8deg); transition: transform 220ms ease; z-index: 0; }
+    .nav .nav-cta:hover::before { transform: translateX(0%) translateY(0%) rotate(0deg); }
+    .nav .nav-cta > * { position: relative; z-index: 1; }
   </style>
 </head>
 <body>
@@ -155,7 +173,7 @@
     <nav class="nav" aria-label="Primary">
       <div class="brand">
         <div class="logo" aria-hidden="true"></div>
-        <a href="#top" class="home">RESCUE</a>
+        <a href="#top" class="home" aria-label="RESCUE"><span class="glyph">R</span><span class="glyph">E</span><span class="glyph">S</span><span class="glyph">C</span><span class="glyph">U</span><span class="glyph">E</span></a>
       </div>
       <button class="menu-toggle" aria-expanded="false" aria-controls="primary-menu" aria-label="Toggle menu">
         <svg width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
@@ -171,6 +189,8 @@
         <li><a href="#team">Team</a></li>
         <li><a href="#deliverables">Deliverables</a></li>
         <li><a href="#ack">Acknowledgements</a></li>
+        <li><a class="nav-cta" href="cosimplat.html"><span>CoSimPlat</span></a></li>
+        <li><a class="nav-cta" href="replay.html"><span>REPlay</span></a></li>
       </ul>
     </nav>
   </header>
@@ -340,9 +360,13 @@
     <div class="footer-inner">
       <div>© <span id="year"></span> RESCUE Project</div>
       <div class="footer-links">
-        <a href="terms.html">Terms</a>
-        <a href="privacy.html">Privacy</a>
-        <a href="#top">Back to top</a>
+        <a href="cosimplat.html">CoSimPlat</a>
+        <a href="replay.html">REPlay</a>
+        <a href="https://github.com/ESI-FAR/rescue-showcase" target="_blank" rel="noopener noreferrer" class="gh-link" title="GitHub repository">
+          <svg class="icon" width="18" height="18" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M12 .5A11.5 11.5 0 0 0 .5 12.3c0 5.2 3.4 9.6 8 11.2.6.1.8-.3.8-.6v-2.2c-3.3.7-4-1.6-4-1.6-.6-1.4-1.5-1.8-1.5-1.8-1.2-.8.1-.8.1-.8 1.4.1 2.1 1.5 2.1 1.5 1.2 2.1 3.2 1.5 4 .9.1-.9.5-1.5.8-1.8-2.7-.3-5.5-1.4-5.5-6.2 0-1.5.5-2.7 1.4-3.7-.1-.3-.6-1.8.1-3.7 0 0 1.2-.4 3.9 1.4 1.2-.3 2.4-.4 3.6-.4s2.4.1 3.6.4c2.7-1.8 3.9-1.4 3.9-1.4.7 1.9.3 3.4.2 3.7.9 1 1.4 2.2 1.4 3.7 0 4.9-2.8 5.9-5.5 6.2.5.4.9 1.2.9 2.4V23c0 .3.2.7.8.6 4.6-1.6 8-6 8-11.2A11.5 11.5 0 0 0 12 .5Z"/></svg>
+          <span>GitHub</span>
+        </a>
+        
       </div>
     </div>
   </footer>
@@ -360,6 +384,50 @@
         toggle.setAttribute('aria-expanded', String(isOpen));
       });
     }
+    </script>
+  <script>
+    // RESCUE brand text: random right->left sweep with occasional anomaly blink
+    (function(){
+      const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+      const home = document.querySelector('.brand .home');
+      if (!home || prefersReduced) return;
+      const letters = Array.from(home.querySelectorAll('.glyph'));
+      if (!letters.length) return;
+      const wait = (ms) => new Promise(r => setTimeout(r, ms));
+
+      async function sweepWithAnomaly() {
+        const idx = [...letters.keys()].reverse(); // rtl order
+        const doAnomaly = Math.random() < 0.35;
+        const mid = Math.floor(idx.length/2) + (Math.random() < 0.5 ? -1 : 1);
+        const stopAt = doAnomaly ? Math.max(1, Math.min(idx.length-2, mid)) : -1;
+        const step = 55;
+        for (let k = 0; k < idx.length; k++) {
+          const i = idx[k];
+          letters[i].classList.add('lit');
+          if (doAnomaly && k === stopAt) {
+            const group = [i, idx[k-1], idx[k+1]].filter(v => v !== undefined);
+            group.forEach(j => letters[j].classList.add('alert','blink'));
+            await wait(900);
+            group.forEach(j => letters[j].classList.remove('blink'));
+          }
+          await wait(step);
+        }
+        await wait(400);
+        const idx2 = [...letters.keys()];
+        for (let k = 0; k < idx2.length; k++) {
+          const i = idx2[k];
+          letters[i].classList.remove('lit','alert','blink');
+          await wait(60);
+        }
+      }
+
+      (async function cycle(){
+        while (true) {
+          await wait(2000 + Math.random()*5000); // random idle 2–7s
+          await sweepWithAnomaly();
+        }
+      })();
+    })();
   </script>
 </body>
 </html>
