add cosimplat vpn login placeholder + replay

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <li><a href="#team">Team</a></li>
         <li><a href="#deliverables">Deliverables</a></li>
         <li><a href="#ack">Acknowledgements</a></li>
-        <li><a class="nav-cta" href="cosimplat.html"><span>CoSimPlat</span></a></li>
+        <li><a class="nav-cta" href="cosimplat_login.html"><span>CoSimPlat</span></a></li>
         <li><a class="nav-cta" href="replay.html"><span>REPlay</span></a></li>
       </ul>
     </nav>
