--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
 
   <style>
     :root {
@@ -361,13 +362,18 @@
     </p>
   </section>
 
+  <script defer src="cookie-consent.js"></script>
+
   <!-- Footer -->
   <footer>
     <div class="footer-inner">
       <div>© <span id="year"></span> RESCUE Project</div>
       <div class="footer-links">
+        <a href="#" onclick="CookieConsent.open(); return false;">Cookie settings</a>
+
         <a href="cosimplat.html">CoSimPlat</a>
         <a href="replay.html">REPlay</a>
+
         <a href="https://github.com/ESI-FAR/rescue-showcase" target="_blank" rel="noopener noreferrer" class="gh-link" title="GitHub repository">
           <svg class="icon" width="18" height="18" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M12 .5A11.5 11.5 0 0 0 .5 12.3c0 5.2 3.4 9.6 8 11.2.6.1.8-.3.8-.6v-2.2c-3.3.7-4-1.6-4-1.6-.6-1.4-1.5-1.8-1.5-1.8-1.2-.8.1-.8.1-.8 1.4.1 2.1 1.5 2.1 1.5 1.2 2.1 3.2 1.5 4 .9.1-.9.5-1.5.8-1.8-2.7-.3-5.5-1.4-5.5-6.2 0-1.5.5-2.7 1.4-3.7-.1-.3-.6-1.8.1-3.7 0 0 1.2-.4 3.9 1.4 1.2-.3 2.4-.4 3.6-.4s2.4.1 3.6.4c2.7-1.8 3.9-1.4 3.9-1.4.7 1.9.3 3.4.2 3.7.9 1 1.4 2.2 1.4 3.7 0 4.9-2.8 5.9-5.5 6.2.5.4.9 1.2.9 2.4V23c0 .3.2.7.8.6 4.6-1.6 8-6 8-11.2A11.5 11.5 0 0 0 12 .5Z"/></svg>
           <span>GitHub</span>
