add privacy.html and terms.html

--- a/index.html
+++ b/index.html
@@ -369,6 +369,8 @@
     <div class="footer-inner">
       <div>© <span id="year"></span> RESCUE Project</div>
       <div class="footer-links">
+        <a href="privacy.html">Privacy</a>
+        <a href="terms.html">Terms</a>
         <a href="#" onclick="CookieConsent.open(); return false;">Cookie settings</a>
 
         <a href="cosimplat.html">CoSimPlat</a>
