fix url redirect from replay.html -> cosimplat_login.html

--- a/replay.html
+++ b/replay.html
@@ -66,7 +66,7 @@
         <span class="badge" style="margin-left:6px; border:1px solid var(--border); background:#13243d; color:var(--muted); padding:4px 8px; border-radius:999px; font-size:.85rem">REPlay</span>
       </div>
       <div class="cta">
-        <a class="btn btn-ghost" href="cosimplat.html"><span>CoSimPlat</span></a>
+        <a class="btn btn-ghost" href="cosimplat_login.html"><span>CoSimPlat</span></a>
       </div>
     </nav>
   </header>
