--- a/index.html
+++ b/index.html
@@ -48,7 +48,23 @@
     .site-header { position: sticky; top:0; z-index: 50; backdrop-filter: blur(8px); background: linear-gradient(180deg, rgba(10,14,22,0.9), rgba(10,14,22,0.6)); border-bottom: 1px solid var(--border); }
     .nav { max-width: var(--maxw); margin: 0 auto; display:flex; align-items:center; justify-content:space-between; padding: 14px 20px; position: relative; }
     .brand { display:flex; align-items:center; gap:10px; font-weight: 700; letter-spacing: 0.3px; }
-    .brand .logo { width: 28px; height: 28px; border-radius: 6px; background: linear-gradient(135deg, var(--brand-strong), var(--accent)); box-shadow: var(--shadow); }
+    .brand .logo {
+      width: 52px;
+      height: 52px;
+      border-radius: 12px;
+      object-fit: contain;
+      box-shadow: var(--shadow);
+    }
+    .footer-logo {
+      width: 252px;   /* reduced from 24px */
+      height: 252px;  /* reduced from 24px */
+      margin-right: 8px;
+      border-radius: 4px;
+      object-fit: contain;
+      vertical-align: middle;
+    }
+
+
     /* RESCUE word scanner effect */
     .brand .home { display:inline-flex; gap: 1px; letter-spacing: 0.1ch; }
     .brand .home .glyph { color: var(--text); transition: color 140ms ease, text-shadow 140ms ease; text-shadow: none; }
@@ -180,7 +196,8 @@
   <header class="site-header">
     <nav class="nav" aria-label="Primary">
       <div class="brand">
-        <div class="logo" aria-hidden="true"></div>
+        <img src="img/RESCUE_logo_transparent_light.png" alt="RESCUE logo" class="logo" aria-hidden="true">
+
         <a href="#top" class="home" aria-label="RESCUE"><span class="glyph">R</span><span class="glyph">E</span><span class="glyph">S</span><span class="glyph">C</span><span class="glyph">U</span><span class="glyph">E</span></a>
       </div>
       <button class="menu-toggle" aria-expanded="false" aria-controls="primary-menu" aria-label="Toggle menu">
@@ -209,7 +226,6 @@
       <h1>RESCUE — Resilience and Cyber Security of Integrated Cyber-Physical Energy Systems</h1>
       <p>
         A public showcase for the RESCUE project. Explore goals, methods, partners, and outputs.
-        This proof‑of‑concept uses accessible, responsive, and lightweight markup suitable for GitHub Pages.
       </p>
       <div class="cta">
         <a class="btn btn-primary" href="#sections"><span>Explore the highlights</span></a>
@@ -367,7 +383,10 @@
   <!-- Footer -->
   <footer>
     <div class="footer-inner">
-      <div>© <span id="year"></span> RESCUE Project</div>
+      <div>
+        <img src="img/RESCUE_new_logo_transparent.png" alt="RESCUE logo" class="footer-logo">
+        © <span id="year"></span> RESCUE Project
+      </div>
       <div class="footer-links">
         <a href="privacy.html">Privacy</a>
         <a href="terms.html">Terms</a>
