--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <div>
       <h1>RESCUE — Resilience and Cyber Security of Integrated Cyber-Physical Energy Systems</h1>
       <p>
-        A public showcase for the RESCUE project. Explore goals, methods, partners, and outputs.
+        A public showcase for the RESCUE project. Explore goals, partners, and outputs.
       </p>
       <div class="cta">
         <a class="btn btn-primary" href="#sections"><span>Explore the highlights</span></a>
@@ -384,7 +384,7 @@
   <footer>
     <div class="footer-inner">
       <div>
-        <img src="img/RESCUE_new_logo_transparent.png" alt="RESCUE logo" class="footer-logo">
+        <img src="img/RESCUE_logo_transparent_white_crop.png" alt="RESCUE logo" class="footer-logo">
         © <span id="year"></span> RESCUE Project
       </div>
       <div class="footer-links">
