add rescue mission in place of about

--- a/index.html
+++ b/index.html
@@ -238,14 +238,42 @@
     </div>
   </main>
 
-  <!-- About / Intro -->
+    <!-- About / Intro -->
   <section id="about" class="wrap">
-    <h2 class="section-title">About the Project</h2>
-    <p style="color:var(--muted); max-width: 75ch">
-      Short description placeholder. Summarize the RESCUE project's objectives, research questions, and potential impact.
-      Keep this concise and public‑facing. Link to the full README or documentation where appropriate.
-    </p>
+    <div class="card">
+      <h2 class="section-title" style="margin-bottom:16px;">Mission</h2>
+
+
+      <p>
+       RESCUE develops advanced mathematical and computational foundations, methods, and technologies for
+      </p>
+      <ul style="padding-left: 1.2rem; color: var(--muted);">
+        <li>Incident response to protect utilities from (state-sponsored) cyber attacks</li>
+        <li>Cyber secure the Control Room of the Future (CRoF)</li>
+      </ul>
+
+      <p>
+        Improve operational resilience of integrated Cyber-Physical energy Systems (CPS) by combining
+      </p>
+      <ul style="padding-left: 1.2rem; color: var(--muted);">
+        <li>Innovative technologies</li>
+        <li>Incident response strategies</li>
+        <li>Human factors</li>
+      </ul>
+
+      <p>
+        Develop human capital for power system operators
+      </p>
+      <ul style="padding-left: 1.2rem; color: var(--muted);">
+        <li>Training facility: digital twin, CRoF &amp; cyber range</li>
+        <li>Conduct attack / defense exercises</li>
+        <li>Train system operators &amp; cyber security professionals for incident response</li>
+      </ul>
+    </div>
   </section>
+
+
+
 
   <!-- Three alternating feature sections (two columns each) -->
   <section id="sections" class="feature">
