--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
   <section id="ack" class="wrap">
     <h2 class="section-title">Acknowledgements</h2>
     <p style="color:var(--muted); max-width: 75ch">
-      This work is supported by [Funder / Grant number placeholder]. We thank our collaborators and community reviewers for their feedback.
+      This work was supported in part by the Dutch Research Council’s RESCUE Project NWO ESI.2019.006
     </p>
   </section>
 
