--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
     }
 
     /* Footer */
+   
     footer { border-top: 1px solid var(--border); background: #0a1220; }
     .footer-inner {
       max-width: var(--maxw);
@@ -332,11 +333,37 @@
       padding: 24px 20px;
       display:flex;
       flex-wrap: wrap;
-      gap: 10px;
+      gap: 10px 24px;
       align-items:center;
       justify-content: space-between;
       color: var(--muted);
     }
+
+    .footer-brand {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .footer-links { display:flex; gap: 16px; }
+
+    .footer-copy {
+      flex-basis: 100%;        /* new row under links */
+      text-align: right;       /* where the red line is on desktop */
+      font-size: 0.9rem;
+    }
+
+    /* Mobile footer layout */
+    @media (max-width: 600px) {
+      .footer-inner {
+        justify-content: center;
+      }
+      .footer-copy {
+        text-align: center;    /* centered under everything on mobile */
+        margin-top: 6px;
+      }
+    }
+
     .footer-links { display:flex; gap: 16px; }
 
     /* Larger screens general layout */
@@ -669,27 +696,44 @@
   <!-- Footer -->
   <footer>
     <div class="footer-inner">
-      <div>
-        <img src="img/RESCUE_logo_transparent_white_crop.png" alt="RESCUE logo" class="footer-logo">
-        © <span id="year"></span> RESCUE Project
+      <div class="footer-brand">
+        <img src="img/RESCUE_logo_transparent_white_crop.png"
+            alt="RESCUE logo"
+            class="footer-logo">
       </div>
+
       <div class="footer-links">
         <a href="privacy.html">Privacy</a>
         <a href="terms.html">Terms</a>
         <a href="#" onclick="CookieConsent.open(); return false;">Cookie settings</a>
-
         <a href="cosimplat.html">CoSimPlat</a>
         <a href="replay.html">REPlay</a>
-
-        <a href="https://github.com/ESI-FAR/rescue-showcase" target="_blank" rel="noopener noreferrer" class="gh-link" title="GitHub repository">
-          <svg class="icon" width="18" height="18" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-            <path fill="currentColor" d="M12 .5A11.5 11.5 0 0 0 .5 12.3c0 5.2 3.4 9.6 8 11.2.6.1.8-.3.8-.6v-2.2c-3.3.7-4-1.6-4-1.6-.6-1.4-1.5-1.8-1.5-1.8-1.2-.8.1-.8.1-.8 1.4.1 2.1 1.5 2.1 1.5 1.2 2.1 3.2 1.5 4 .9.1-.9.5-1.5.8-1.8-2.7-.3-5.5-1.4-5.5-6.2 0-1.5.5-2.7 1.4-3.7-.1-.3-.6-1.8.1-3.7 0 0 1.2-.4 3.9 1.4 1.2-.3 2.4-.4 3.6-.4s2.4.1 3.6.4c2.7-1.8 3.9-1.4 3.9-1.4.7 1.9.3 3.4.2 3.7.9 1 1.4 2.2 1.4 3.7 0 4.9-2.8 5.9-5.5 6.2.5.4.9 1.2.9 2.4V23c0 .3.2.7.8.6 4.6-1.6 8-6 8-11.2A11.5 11.5 0 0 0 12 .5Z"/>
+        <a href="https://github.com/ESI-FAR/rescue-showcase"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="gh-link"
+          title="GitHub repository">
+          <svg class="icon"
+              width="18"
+              height="18"
+              viewBox="0 -3.1 2490.3 2493"
+              aria-hidden="true"
+              focusable="false">
+            <ellipse cx="1245.2" cy="1243.4" fill="#fff" rx="1217.6" ry="1246.5" />
+            <path d="m1245.2 1.6c-687.6 0-1245.2 557.4-1245.2 1245.1 0 550.2 356.8 1016.9 851.5 1181.5 62.2 11.5 85.1-27 85.1-59.9 0-29.7-1.2-127.8-1.7-231.8-346.4 75.3-419.5-146.9-419.5-146.9-56.6-143.9-138.3-182.2-138.3-182.2-113-77.3 8.5-75.7 8.5-75.7 125 8.8 190.9 128.3 190.9 128.3 111.1 190.4 291.3 135.3 362.3 103.5 11.2-80.5 43.4-135.4 79.1-166.5-276.6-31.5-567.3-138.3-567.3-615.4 0-135.9 48.6-247 128.3-334.2-12.9-31.3-55.5-157.9 12.1-329.4 0 0 104.6-33.5 342.5 127.6 99.3-27.6 205.8-41.4 311.7-41.9 105.8.5 212.4 14.3 311.9 41.9 237.7-161.1 342.1-127.6 342.1-127.6 67.8 171.5 25.1 298.2 12.2 329.5 79.8 87.2 128.1 198.3 128.1 334.2 0 478.2-291.3 583.6-568.6 614.4 44.7 38.6 84.5 114.4 84.5 230.6 0 166.6-1.4 300.7-1.4 341.7 0 33.1 22.4 72 85.5 59.7 494.5-164.8 850.8-631.4 850.8-1181.4 0-687.7-557.5-1245.1-1245.1-1245.1"
+                  fill="#5c6bc0" />
           </svg>
           <span>GitHub</span>
         </a>
+
+      </div>
+
+      <div class="footer-copy">
+        © <span id="year"></span> RESCUE Project
       </div>
     </div>
   </footer>
+
 
   <script>
     // Update copyright year
